fixing some navbar issues for mobile where logo disappears behind bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,10 +94,12 @@ footer a:hover {
 
 .logoalignmenthome {
 
-  width: 100%;
+  position: relative;
+  z-index: 1100;  
+  width: 100%; 
   max-width: 200px;
   height: auto; 
-  display: block; 
+  display: block;
   margin: 0 auto;
 }
 
@@ -124,6 +126,10 @@ footer a:hover {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23B21F24' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
+.navbar {
+  position: relative;
+  z-index: 1000; 
+}
 
 
 .main {
